# rust-xml-data

./: Cargo.toml  README.md  out.rs
.github/workflows/: quickstart.yml  rust.yml
.travis/: encrypt-key.sh  id_rsa.enc  travis-doc-upload.cfg
xml-data/: Cargo.toml  README.md
xml-data-derive/: Cargo.toml  README.md
xml-data-derive/src/: attributes.rs  element.rs  lib.rs  parser.rs  serialize.rs
xml-data-derive/src/element/: infer_type.rs
xml-data-derive/src/parser/: state.rs
xml-data-derive/tests/: version-numbers.rs
xml-data/examples/: serializer.rs  struct_custom_tag.rs
xml-data/src/: errors.rs  extensions.rs  lib.rs  test_struct.rs  traits.rs
xml-data/src/parser/: core.rs  default.rs  extensions.rs  fixed_element.rs  ignore.rs  inner.rs  mod.rs  value.rs
xml-data/src/quick_xml/: mod.rs  parser.rs  serializer.rs
xml-data/src/serializer/: core.rs  fixed_element.rs  inner.rs  mod.rs  value.rs
