[package]
name = "xml-data-derive"
version = "0.0.1"
authors = ["Stefan Bühler <stbuehler@web.de>"]
edition = "2018"
#
description = "Derive macros for generic XML parsing and serializing"
documentation = "https://docs.rs/xml-data"
homepage = "https://github.com/stbuehler/rust-xml-data"
repository = "https://github.com/stbuehler/rust-xml-data"
categories = ["data-structures","encoding","parsing"]
keywords = ["xml","derive"]
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
darling = "0.13.0"
proc-macro2 = "1.0.6"
quote = "1.0.2"
serde_derive_internals = "0.26.0"
syn = "1.0.11"

[dev-dependencies]
version-sync = "0.8.1"
