[package]
name = "xml-data-derive"
version = "0.0.1"
authors = ["Stefan Bühler <stbuehler@web.de>"]
edition = "2018"
#
description = "Derive macros for generic XML parsing and serializing"
documentation = "https://docs.rs/xml-data"
homepage = "https://github.com/stbuehler/rust-xml-data"
repository = "https://github.com/stbuehler/rust-xml-data"
categories = ["data-structures","encoding","parsing"]
keywords = ["xml","derive"]
readme = "README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.6"
quote = "1.0.2"
syn = "1.0.11"

[dev-dependencies]
version-sync = "0.9.2"
